--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ html,body
   left: 0;
   right: 0;
 }
-
+/*
 .carousel {
   height: 600px !important;
   margin-top: 9em !important;
@@ -127,7 +127,7 @@ html,body
 .carousel-item {
   width: 600px !important;
   height: 300px !important;
-}
+}*/
 .one {
   background-repeat: no-repeat;
   background-image: url('../img/projects/artgallery.PNG');
@@ -177,7 +177,7 @@ html,body
 .know-me {
   padding-top: 2em;
 }
-
+/*
 .carousel {
    height: 200px !important;
   margin-top: 5em;
@@ -187,7 +187,7 @@ html,body
   width: 250px !important;
   height: 200px !important;
 }
-
+*/
 .icons {
   padding-top: 8em;
   padding-left: 0;
@@ -204,17 +204,17 @@ html,body
 .know-me {
   padding-top: 4em;
 }
-
+/*
 .carousel {
-   height: 200px !important;
+   height: 600px !important;
   margin-top:3em;
 }
 
 .carousel-item {
   width: 250px !important;
-  height: 200px !important;
+  height: 600px !important;
 }
-
+*/
 
 .icons {
   padding-top: 8em;
@@ -235,7 +235,7 @@ html,body
   padding-top: 5em;
   margin-left: 5em;
 }
-
+/*
 .carousel {
    height: 200px !important;
   margin-top:3em;
@@ -245,7 +245,7 @@ html,body
   width: 400px !important;
   height: 200px !important;
 }
-
+*/
 .icons {
   padding-top: 8em;
   padding-left: 0;
@@ -262,7 +262,7 @@ html,body
   margin-left: 2em;
   margin-top: 2em;
 }
-
+/*
 .carousel {
    height: 300px !important;
   margin-top:3em;
@@ -271,7 +271,7 @@ html,body
 .carousel-item {
   width: 600px !important;
   height: 300px !important;
-}
+}*/
 .icons {
   text-align: center;
   padding-top: 8em;
@@ -287,7 +287,7 @@ html,body
 .know-me {
   margin-top: 5em;
 }
-
+/*
 .carousel {
    height: 300px !important;
   margin-top: 9em;
@@ -296,7 +296,7 @@ html,body
 .carousel-item {
   width: 600px !important;
   height: 300px !important;
-}
+}*/
 .icons {
   text-align: center;
   padding-top: 10em;
@@ -304,3 +304,10 @@ html,body
 }
 }
 
+.avia_mobile #top .av-parallax-section{
+  -webkit-transform: translate3d(0,0,0);
+}
+
+.carousel {
+  z-index: 10000000000;
+}
